Fix the button misalignment

--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ body {
   border-radius: 40px;
   padding: 10px;
   background: #2f3640;
-  width: 200px;
 }
 
 .text {
@@ -33,7 +32,6 @@ body {
 }
 
 .button {
-  position: relative;
   color: #e84118;
   float: right;
   width: 40px;
